fix: scrollbar style

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -464,3 +464,20 @@ footer .subscribe-box ul li a:hover .wechat-dropdown {
 [data-theme="dark"]:not(#\#):not(#\#) .theme-doc-sidebar-item-category .menu__link--sublist {
   color: #eef1f3;
 }
+
+.theme-doc-sidebar-container .menu::-webkit-scrollbar {
+  width: 5px;
+}
+
+.theme-doc-sidebar-container .menu::-webkit-scrollbar-track {
+  background-color: rgb(0 0 0 / 5%);
+}
+
+.theme-doc-sidebar-container .menu::-webkit-scrollbar-thumb {
+  background-color: rgb(144 147 153 / 30%);
+  border-radius: 2px;
+  box-shadow: inset 0 0 6px rgb(0 0 0 / 20%);
+}
+.theme-doc-sidebar-container .menu::-webkit-scrollbar-thumb:hover {
+  background-color: #b6b7b9;
+}
